--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "jsdoc": "^3.5.5",
-    "@dwaring87/docdash": "^0.4.1"
+    "docdash": "^1.2.0",
+    "jsdoc": "^3.5.5"
   },
   "homepage": "https://righttrack.io",
   "repository": {
