--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "license": "MIT",
   "main": "src/index.js",
   "scripts": {
-    "docs": "jsdoc -c jsdoc.json --readme README.md --template $NODE_PATH/@dwaring87/docdash"
+    "docs": "jsdoc -c jsdoc.json"
   },
   "dependencies": {
     "right-track-transit": "^1.1.2",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "docdash": "^1.2.0",
+    "foodoc": "^0.0.9",
     "jsdoc": "^3.5.5"
   },
   "homepage": "https://righttrack.io",
